@@ -6,6 +6,8 @@ Release notes
 - The TghSQLEventHandler was fused in TghSQLHandler class.
 - New TghSQLHandler.OnException property to catch all exceptions.
 - Now TghSQLClient and TghSQLLib classes inherit from TghSQLHandler.
+- Now TghSQLTable class inherit form TghSQLClient.
+- Deleted TghSQLTable.DataSet property. Instead use Open(DS) method inherit from TghSQLHandler class.
 
 
 (2013-05-13)
